--- a/sources/index.html
+++ b/sources/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Github Search User</title>
+  <base href="/" />
   <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
   <div id="app"></div>
-  <script src="/app.bundle.js"></script>
+  <script src="app.bundle.js"></script>
 </body>
 </html>
